--- a/_sass/uno.scss
+++ b/_sass/uno.scss
@@ -1641,17 +1641,17 @@ input[type="tel"] {
 		float: left;
 		clear: left;
 		width: 100%; }
-		.cover-navigation .navigation {
-			display: block;
-			width: 100%; }
-			.cover-navigation .navigation li {
-				width: 80%;
-				margin-bottom: .4em; }
-		.cover-navigation.navigation--social {
-			padding-top: 5px; }
-			.cover-navigation.navigation--social .navigation li {
-				display: inline-block;
-				width: 25.8%; }
+	.cover-navigation .navigation {
+		display: block;
+		width: 100%; }
+	.cover-navigation .navigation li {
+		width: 80%;
+		margin-bottom: .4em; }
+	.cover-navigation.navigation--social {
+		padding-top: 5px; }
+	.cover-navigation.navigation--social .navigation li {
+		display: inline-block;
+		width: fit-content; }
 
 	.content-wrapper {
 		width: 80%;
